# zarafe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
build-tools/pyinstaller-hooks/: README.md  hook-_core_pybinds.py  hook-cv2.py  hook-projectaria_tools.py
resources/: app_icon.icns
zarafe/: main_window.py
zarafe/controllers/: main_controller.py  project_controller.py  video_navigation_controller.py
zarafe/core/: audio_manager.py  color_theme_manager.py  config.py  configuration_service.py  event_manager.py  event_type_registry.py  gaze_data.py  metadata.py  shortcut_manager.py  video_manager.py
zarafe/utils/: file_utils.py  importer.py  sorting.py  theme.py
zarafe/utils/aria/: __init__.py  aria_importer.py  aria_vrs_exporter.py  vrs_to_video_lossless.py
zarafe/widgets/: about_dialog.py  base_dialog.py  event_controls.py  menu_manager.py  metadata_panel.py  new_project_dialog.py  project_dialog.py  pupil_plot.py  video_controls.py  video_display.py
zarafe/widgets/panels/: left_panel.py  main_layout_manager.py
